# ai-incident-autopilot

./: .env.example  .gitignore  AI-Based Incident Classification (Mock LLM).crop  Dockerfile  Operational Metrics & Rate Tracking.crop  README.md  Service Health Check (Local MVP)crop  Webhook Demo.crop  docker-compose.yml  pyproject.toml  requirements.txt  sample_payload.json
app/: __init__.py  config.py  main.py  models.py
app/db/: __init__.py  database.py
app/middleware/: __init__.py  auth.py  rate_limit.py
app/routers/: __init__.py  health.py  incidents.py  metrics.py  webhook.py
app/services/: __init__.py  audit.py  correlator.py  jira_client.py  llm_client.py  normalizer.py  pir.py  policy.py  risk.py  runbook_matcher.py  slack_client.py
data/: seed_runbooks.json
frontend/: index.html
frontend/static/: app.js  styles.css
tests/: __init__.py  conftest.py  test_normalize.py  test_policy.py
